--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,31 +4,9 @@
 
 @tailwind utilities;
 
-/* line 7 - 34 is for typewriter function */
-/* Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-/* Global */
-html{
-  min-height: 100%;
-  overflow: hidden;
-}
-body{
-  height: calc(100vh - 8em);
-  padding: 4em;
-  color: rgba(255,255,255,.75);
-  font-family: 'Anonymous Pro', monospace;  
-  background-color: rgb(25,25,25);  
-}
-.line-1{
-    position: relative;
-    top: 50%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
+/* line 7 - 12 is for typewriter function */
+.demo {
+    display: none;
+    font-size: 15pt;
+    color: green;
 }
