--- a/index.pug
+++ b/index.pug
@@ -52,7 +52,7 @@ html(lang='en')
             - n++;
             .loader__tile
 
-      main.wrapper(class="grid grid-rows-3 grid-flow-col bg-gradient-to-b from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen")
+      main.wrapper(class="grid grid-rows-3 grid-flow-col bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen")
         .grid-cols-1
         header.introduction.grid-cols-1(class="text-white text-2xl")
           h1.typewriter(class="font-medium invisible") Hi, my name is Robert.
