fixed text styles

--- a/index.pug
+++ b/index.pug
@@ -54,6 +54,6 @@ html(lang='en')
 
       main.wrapper(class="grid grid-rows-3 grid-flow-col bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen")
         .grid-cols-1
-        header.introduction.grid-cols-1(class="text-white text-2xl")
-          h1.typewriter(class="font-medium invisible") Hi, my name is Robert.
-          h1.typewriter(class="font-normal invisible") I am a full-stack web developer and digital graphic designer.
+        header.introduction.grid-cols-1(class="text-white")
+          h1.typewriter(class="font-medium text-4xl invisible") Hi, my name is Robert.
+          h1.typewriter(class="font-normal text-3xl mt-10 invisible") I am a full-stack web developer and graphic designer.
