--- a/assets/scss/_pageRender.scss
+++ b/assets/scss/_pageRender.scss
@@ -1,79 +1,113 @@
-/* 
-transition styles from codepen.io 
-*/
-
-$cyan: #007AE5;
-$tiles: 5;
-
-.wrapper {
-  height: 100vh;
-  text-align: center;
-  
-  button {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+* {
+  :before {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  :after {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
   }
 }
 
-.loader {
-  $parent: &;
+.hide {
+  display: none;
+}
 
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100vh;
-  transition: width 0s 1.4s ease;
-  
-  #{$parent}__icon {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+.animate_content {
+  animation: animate 3s ease;
+}
+
+.fadeIn {
+  z-index: 10;
+}
+
+
+// *****************************************************************
+//  *~ Mobile media-queries (max-width: 767px)
+//  ******************************************************************
+@-moz-keyframes animate {
+  10% {
+    transform: scale(1, 0.002);
+  }
+  35% {
+    transform: scale(0.2, 0.002);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.2, 0.002);
     opacity: 0;
-    transition: opacity .5s ease;
-    
-    svg {
-      transform-origin: 0 0;
-    }
   }
-  
-  #{$parent}__tile {
-    position: absolute;
-    left: 0;
-    width: 0;
-    height: 20%;
-    background-color: $cyan;
-    transition: width .7s ease;
-    
-    @for $i from 0 through $tiles {
-      &:nth-child(#{$i}) {
-        top: calc(#{$i - 1} * 20%);
-        transition-delay: #{($i - 1) * 0.2s};
-      }
-    }
+  85% {
+    transform: scale(1, 0.002);
+    opacity: 1;
   }
-  
-  &--active {
-    width: 100%;
-    transition-delay: 0s;
-    
-    #{$parent}__icon {
-      opacity: 1;
-      transition: opacity .5s 1.4s ease;
-    }
-    
-    #{$parent}__tile {
-      width: 100%;
+  100% {
+    transform: scale(1, 1);
+  }
+}
 
-      @for $i from 0 through $tiles {
-        &:nth-child(#{$i}) {
-          transition-delay: #{($i - 1) * 0.2s};
-        }
-      }
-    }
+@-webkit-keyframes animate {
+  10% {
+    transform: scale(1, 0.002);
+  }
+  35% {
+    transform: scale(0.2, 0.002);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.2, 0.002);
+    opacity: 0;
+  }
+  85% {
+    transform: scale(1, 0.002);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+@-o-keyframes animate {
+  10% {
+    transform: scale(1, 0.002);
+  }
+  35% {
+    transform: scale(0.2, 0.002);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.2, 0.002);
+    opacity: 0;
+  }
+  85% {
+    transform: scale(1, 0.002);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+
+@keyframes animate {
+  10% {
+    transform: scale(1, 0.002);
+  }
+  35% {
+    transform: scale(0.2, 0.002);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(0.2, 0.002);
+    opacity: 0;
+  }
+  85% {
+    transform: scale(1, 0.002);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1, 1);
   }
 }
