Projects page is mostly complete

--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,8 @@ html(lang='en')
     head
         title Robert Schmahl
         //- styles
+        //- fontawesome cdn
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.15.1/css/all.css", integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp", crossorigin="anonymous")        
         //- tailwindcss stylesheets
         link(href='../assets/styles/styles.css' rel='stylesheet')
         link(href='../assets/styles/output.css' rel='stylesheet')
