--- a/assets/scss/_buttonStyles.scss
+++ b/assets/scss/_buttonStyles.scss
@@ -43,6 +43,11 @@ $lighter: lighten($color2, 10%);
         background: #59788e;
         box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
     }
+    &.active {
+      background: #59788e;
+      box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.85);
+    }
+
 }
 
 
