started work on contact page

--- a/index.pug
+++ b/index.pug
@@ -22,4 +22,4 @@ html(lang='en')
         header.introduction(class="page_description grid grid-rows-6 grid-flow-col justify-center text-center gap-10 text-white")
           .row-span-3
           h1.typewriter(class="row-span-1 font-medium text-4xl invisible") Hi, my name is Robert.
-          h1.typewriter(class="row-span-1 font-normal text-3xl invisible") I am a full-stack web developer and graphic designer.
+          h1.typewriter(class="row-span-1 font-normal text-3xl invisible") I am a full-stack web developer and designer.
