--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,3 +4,54 @@
 dt {
     padding-top: 0.5%;
 }
+
+.overlay {
+    background: url(../imgs/robert-1.png);
+    background-repeat: repeat;
+    margin-left: -20%;
+    margin-bottom: -10%;
+    opacity: 0.20;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+}
+
+.aboutHeader {
+    width: 50%;
+    margin-left: 30%;
+    margin-right: 40%;
+}
+
+.aboutContent {
+    &1 {
+        width: 50%;
+        margin-left: 35%;
+        margin-right: 35%;
+    }
+    &2 {
+        width: 30%;
+        margin-left: 40%;
+        margin-right: 35%;
+    }
+    &3 {
+        width: 50%;
+        margin-left: 50%;
+        margin-right: 35%;
+    }
+    &4 {
+        width: 45%;
+        margin-left: 30%;
+        margin-right: 35%;
+    }
+    &5 {
+        width: 60%;
+        margin-left: 40%;
+        margin-right: 35%;
+    }
+    &6 {
+        width: 60%;
+        margin-left: 25%;
+        margin-right: 35%;
+    }
+}
