--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,10 @@ dt {
     padding-top: 0.5%;
 }
 
+nav {
+    z-index: 0;
+}
+
 .overlay {
     background: url(../imgs/robert-1.png);
     background-repeat: repeat;
@@ -15,12 +19,14 @@ dt {
     height: 100%;
     width: 100%;
     background-repeat: no-repeat;
+    z-index: 0;
 }
 
 .aboutHeader {
     width: 50%;
     margin-left: 30%;
     margin-right: 40%;
+
 }
 
 .aboutContent {
