--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,6 +22,11 @@ nav {
     z-index: 0;
 }
 
+.resumeLinkSkills {
+    margin-left: -0.5%;
+    position: absolute;
+}
+
 .aboutHeader {
     width: 50%;
     margin-left: 30%;
