partially refactored code and tidied up animations. Animations still need some work but are more consistent now

--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ html(lang='en')
 
     body
 
-      main.wrapper(class="page_style bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen")
+      main.wrapper(id ="page_style" class="bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen")
         div.introduction(class="page_description grid grid-rows-6 grid-flow-col justify-center text-center gap-10 text-white")
           .row-span-3
           h1.typewriter(class="row-span-1 font-medium text-4xl invisible") Hi, my name is Robert.
