--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,10 @@ nav {
     z-index: 0;
 }
 
+.introduction {
+    margin-top: 20%;
+}
+
 .overlay {
     background: url(../imgs/robert-1.png);
     background-repeat: repeat;
@@ -22,47 +26,16 @@ nav {
     z-index: 0;
 }
 
-.resumeLinkSkills {
-    margin-left: -0.5%;
-    position: absolute;
-}
-
-.aboutHeader {
-    width: 50%;
-    margin-left: 30%;
-    margin-right: 40%;
-
-}
-
 .aboutContent {
-    &1 {
-        width: 50%;
-        margin-left: 35%;
-        margin-right: 35%;
-    }
-    &2 {
-        width: 30%;
-        margin-left: 40%;
-        margin-right: 35%;
-    }
-    &3 {
-        width: 50%;
-        margin-left: 50%;
-        margin-right: 35%;
-    }
-    &4 {
-        width: 45%;
-        margin-left: 30%;
-        margin-right: 35%;
-    }
-    &5 {
-        width: 60%;
-        margin-left: 40%;
-        margin-right: 35%;
-    }
-    &6 {
-        width: 60%;
-        margin-left: 25%;
-        margin-right: 35%;
-    }
+    width: 50%;
+}
+
+.project {
+    width: 25%;
+    height: 25%;
+}
+
+.skillCard {
+    width: 30%;
+    height: 25%;    
 }
