html routing now works in local server

--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -17,29 +17,29 @@ html(lang='en')
             .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Babel
               h3(class=`${h3Styles}`) Generates recipes based off of desired ingredients
-              a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/`)
-                img(src=`../../assets/imgs/webdevo_gif1.gif` alt=`An animated gif of the Recipe Generator web app`)
-              a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/`)
+              a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/` target="_blank")
+                img(src=`./assets/imgs/webdevo_gif1.gif` alt=`An animated gif of the Recipe Generator web app`)
+              a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/` target="_blank")
                 i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
-              a(href=`https://github.com/https-github-com-steversonTong/Recipe-Generatorf`)
+              a(href=`https://github.com/https-github-com-steversonTong/Recipe-Generatorf` target="_blank")
                 i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
             
             .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Day Planner
               h3(class=`${h3Styles}`) Plan your day and track the current time
-              a(href=`https://rschm007.github.io/Day-Planner/`)
-                img(src=`../../assets/imgs/webdevo_gif2.gif` alt=`An animated gif of the Day Planner web app`)
-                a(href=`https://rschm007.github.io/Day-Planner/`)
+              a(href=`https://rschm007.github.io/Day-Planner/` target="_blank")
+                img(src=`./assets/imgs/webdevo_gif2.gif` alt=`An animated gif of the Day Planner web app`)
+                a(href=`https://rschm007.github.io/Day-Planner/ target="_blank"`)
                   i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
-                a(href=`https://github.com/rschm007/Day-Planner`)
+                a(href=`https://github.com/rschm007/Day-Planner` target="_blank")
                   i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
             
             .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Weather Dashboard
               h3(class=`${h3Styles}`) Use the OpenWeatherAPI to search forecasts
-              a(href=`https://rschm007.github.io/Weather-Dashboard/`)
-                img(src=`../../assets/imgs/webdevo_gif3.gif` alt=`An animated gif of the Weather Dashboard web app`)
-                a(href=`https://rschm007.github.io/Weather-Dashboard/`)
+              a(href=`https://rschm007.github.io/Weather-Dashboard/` target="_blank")
+                img(src=`./assets/imgs/webdevo_gif3.gif` alt=`An animated gif of the Weather Dashboard web app`)
+                a(href=`https://rschm007.github.io/Weather-Dashboard/` target="_blank")
                   i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
-                a(href=`https://github.com/rschm007/Weather-Dashboard`)
+                a(href=`https://github.com/rschm007/Weather-Dashboard` target="_blank")
                   i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
