--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -18,10 +18,10 @@ html(lang='en')
             iframe(src="https://docs.google.com/forms/d/e/1FAIpQLSdPRB1YR4bfALbPptVAUAsYcGRWLpsgmQ_AsvHbNk6xTerFbg/viewform?embedded=true" class="flex-initial bg-gray-100 rounded-lg shadow-lg" width="520" scrolling="no" height="720" frameborder="0" marginheight="0" marginwidth="0") Loading...
             .contactButtons(class="flex-initial ml-10")
                 include includes/resume
-                    a(href="https://www.linkedin.com/in/robert-schmahl/" class="linkedin")
+                    a(href="https://www.linkedin.com/in/robert-schmahl/" class="linkedin" target="_blank")
                         i(class=`fab fa-linkedin fa-7x p-4  ${hoverEnlarge} text-white`)
                     
-                    a(href="https://github.com/rschm007" class="github")
+                    a(href="https://github.com/rschm007" class="github" target="_blank")
                         i(class=`fab fa-github-square fa-7x p-4 ${hoverEnlarge} text-white`)
                 
                 
