--- a/pug/includes/head.pug
+++ b/pug/includes/head.pug
@@ -2,12 +2,12 @@
 //- fontawesome cdn
 link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.15.1/css/all.css", integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp", crossorigin="anonymous")        
 //- tailwindcss stylesheets
-link(href='../../assets/styles/styles.css' rel='stylesheet')
-link(href='../../assets/styles/output.css' rel='stylesheet')
+link(href='../public/assets/styles/styles.css' rel='stylesheet')
+link(href='../public/assets/styles/output.css' rel='stylesheet')
 //- local stylesheet
-link(href='../../assets/styles/main.min.css' rel='stylesheet')
+link(href='../public/assets/styles/main.min.css' rel='stylesheet')
 //- scripts
 //- jquery
 script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
 //- local JS
-script(src='../../assets/script.js')
+script(src='../public/assets/script.js')
