express server now does html routes correctly. CSS styles not being imported correctly

--- a/pug/about.pug
+++ b/pug/about.pug
@@ -28,3 +28,4 @@ html(lang='en')
             p(class=`${pStyles}`) Like many people, I was suddenly without a job. After thinking hard about what I wanted from my career, I decided to attend the UCI Full Stack Flex Bootcamp. As a web developer I've found that my design sensibilities, love for creation, and passion-driven work ethic have given me a great excitement in this field.
           .aboutContent(class=`${contentStyles2}`)
             p(class=`${pStyles}`) Let's make something great together.
+    include includes/script
