--- a/pug/skills.pug
+++ b/pug/skills.pug
@@ -88,3 +88,4 @@ html(lang='en')
                 dt 4+ years web design
                 dt 6+ years photography
                 dt 8+ years customer service
+    include includes/script
