--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -23,6 +23,4 @@ html(lang='en')
                     
                     a(href="https://github.com/rschm007" class="github" target="_blank")
                         i(class=`fab fa-github-square fa-7x p-4 ${hoverEnlarge} text-white`)
-                
-                
-            
+    include includes/script
