rel js script now links correctly

--- a/pug/includes/head.pug
+++ b/pug/includes/head.pug
@@ -9,3 +9,5 @@ link(rel="stylesheet" type="text/css" href='/assets/styles/main.min.css')
 //- scripts
 //- jquery
 script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+//- local js
+script(src='/assets/script.js')
