nav buttons now show active state per respective page

--- a/pug/about.pug
+++ b/pug/about.pug
@@ -2,6 +2,7 @@
 - const contentStyles1 = `bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto`;
 - const contentStyles2 = `flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto`;
 - const pStyles = `mt-2 p-2`;
+- const aboutActive = `active`;
 
 doctype html
 html(lang='en')
