--- a/pug/includes/nav.pug
+++ b/pug/includes/nav.pug
@@ -1,8 +1,8 @@
 - const btnStyles = `btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg`;
 
 nav(class=`flex flex-wrap content-start mt-20 mx-auto`)
-  a(href='./index.html' class=`homeLink ${btnStyles} active` type=`button`) Home
-  a(href='./projects.html' class=`projectsLink ${btnStyles}` type=`button`) Projects
-  a(href='./skills.html' class=`skillsLink ${btnStyles}` type=`button`) Skills
-  a(href='./about.html' class=`aboutLink ${btnStyles}` type=`button`) About
-  a(href='./contact.html' class=`contactLink ${btnStyles}` type=`button`) Contact
+  a(href='./index.html' class=`homeLink ${btnStyles} ${homeActive}` type=`button`) Home
+  a(href='./projects.html' class=`projectsLink ${btnStyles} ${projectActive}` type=`button`) Projects
+  a(href='./skills.html' class=`skillsLink ${btnStyles} ${skillsActive}` type=`button`) Skills
+  a(href='./about.html' class=`aboutLink ${btnStyles} ${aboutActive}` type=`button`) About
+  a(href='./contact.html' class=`contactLink ${btnStyles} ${contactActive}` type=`button`) Contact
