--- a/pug/skills.pug
+++ b/pug/skills.pug
@@ -5,6 +5,7 @@
 - const h2Styles = `text-2xl font-bold mt-4 p-2`;
 - const h3Styles = `text-xl text-pink-800 font-semibold mt-4 p-3`;
 - const pStyles = `mt-2 p-2`;
+- const skillsActive = `active`;
 
 doctype html
 html(lang='en')
