--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -4,6 +4,7 @@
 - const h2Styles = `text-2xl font-bold mt-4 p-2`;
 - const h3Styles = `font-normal p-2 mb-4`;
 - const hoverEnlarge = `duration-500 ease-in-out hover:-translate-y-1 transform hover:-scale-120`;
+- const contactActive = `active`;
 
 doctype html
 html(lang='en')
