temporarily removed page render animation

--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -11,7 +11,7 @@ html(lang='en')
       title Robert Schmahl
       include includes/head
     body
-      main.wrapper(id =`page_style` class=`flex flex-col bg-gradient-to-br from-green-900 via-green-600 to-teal-600 h-auto w-auto p-10`)
+      main.wrapper(id =`page_style` class=`fadeIn flex flex-col bg-gradient-to-br from-green-900 via-green-600 to-teal-600 h-auto w-auto p-10`)
         .page_description(class="flex flex-col")
           include includes/nav
           .projects(class="flex flex-wrap mt-20 px-auto")
