--- a/pug/about.pug
+++ b/pug/about.pug
@@ -10,7 +10,7 @@ html(lang='en')
       title Robert Schmahl
       include includes/head
     body
-      main.wrapper(id =`page_style` class=`bg-gradient-to-br from-blue-900 via-teal-400 to-teal-200 h-auto w-auto`)
+      main.wrapper(id =`page_style` class=`fadeIn bg-gradient-to-br from-blue-900 via-teal-400 to-teal-200 h-auto w-auto`)
         .overlay(class=`bg-local w-full`)
         .page_description(class="flex flex-col")
           include includes/nav
