--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -12,7 +12,7 @@ html(lang='en')
       title Robert Schmahl
       include includes/head
     body
-      main.wrapper(id =`page_style` class=`flex flex-col bg-gradient-to-br from-purple-800 via-indigo-700 to-indigo-400 h-auto w-auto p-10`)
+      main.wrapper(id =`page_style` class=`fadeIn flex flex-col bg-gradient-to-br from-purple-800 via-indigo-700 to-indigo-400 h-auto w-auto p-10`)
         .page_description(class="flex flex-col")
           include includes/nav
           .wrapper(class="flex flex-wrap mt-20 mx-auto px-auto")
