--- a/pug/contact.pug
+++ b/pug/contact.pug
@@ -3,7 +3,7 @@
 - const projectCard = `flex-initial text-center bg-gray-100 mx-auto rounded-lg`;
 - const h2Styles = `text-2xl font-bold mt-4 p-2`;
 - const h3Styles = `font-normal p-2 mb-4`;
-- const hoverEnlarge = `duration-500 ease-in-out hover:-translate-y-1 transform hover:-scale-120`;
+- const hoverEnlarge = `transition duration-500 ease-in-out hover:text-red-600 transform hover:-translate-y-1 hover:scale-110`;
 - const contactActive = `active`;
 
 doctype html
