--- a/pug/projects.pug
+++ b/pug/projects.pug
@@ -2,7 +2,7 @@
 - const projectCard = `flex-initial text-center bg-gray-100 mx-auto rounded-lg`;
 - const h2Styles = `text-2xl font-bold mt-4 p-2`;
 - const h3Styles = `font-normal p-2 mb-4`;
-- const hoverEnlarge = `duration-500 ease-in-out hover:-translate-y-1 transform hover:scale-120`;
+- const hoverEnlarge = `transition duration-500 ease-in-out hover:text-red-600 transform hover:-translate-y-1 hover:scale-110`;
 - const projectActive = `active`;
 
 doctype html
@@ -16,12 +16,22 @@ html(lang='en')
           include includes/nav
           .projects(class="flex flex-wrap mt-20 px-auto")
             .project(class=`${projectCard}`)
+              h2(class=`${h2Styles}`) Team Template Generator
+              h3(class=`${h3Styles}`) Build a custom team page with this CLI app
+              a(href=`https://github.com/rschm007/Team_Template_Generator` target="_blank")
+                img(src=`./assets/imgs/webdevo_gif4.gif` alt=`An animated gif of the Team Template Generator web app`)
+              a(href=`https://github.com/rschm007/Team_Template_Generator` target="_blank")
+                i(class=`fas fa-code-branch fa-2x m-2 p-2 ${hoverEnlarge}`)
+              a(href=`https://rschm007.github.io/Team_Template_Generator/Develop/output/team.html` target="_blank")
+                i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
+            
+            .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Babel
               h3(class=`${h3Styles}`) Generates recipes based off of desired ingredients
               a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/` target="_blank")
                 img(src=`./assets/imgs/webdevo_gif1.gif` alt=`An animated gif of the Recipe Generator web app`)
               a(href=`https://https-github-com-steversontong.github.io/Recipe-Generatorf/` target="_blank")
-                i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
+                i(class=`fas fa-code-branch fa-2x m-2 p-2 ${hoverEnlarge}`)
               a(href=`https://github.com/https-github-com-steversonTong/Recipe-Generatorf` target="_blank")
                 i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
             
@@ -30,17 +40,18 @@ html(lang='en')
               h3(class=`${h3Styles}`) Plan your day and track the current time
               a(href=`https://rschm007.github.io/Day-Planner/` target="_blank")
                 img(src=`./assets/imgs/webdevo_gif2.gif` alt=`An animated gif of the Day Planner web app`)
-                a(href=`https://rschm007.github.io/Day-Planner/ target="_blank"`)
-                  i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
+                a(href=`https://rschm007.github.io/Day-Planner/` target="_blank")
+                  i(class=`fas fa-code-branch fa-2x m-2 p-2 ${hoverEnlarge}`)
                 a(href=`https://github.com/rschm007/Day-Planner` target="_blank")
                   i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
-            
+                  
+          .projects(class="flex flex-wrap mt-20 px-auto")
             .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Weather Dashboard
               h3(class=`${h3Styles}`) Use the OpenWeatherAPI to search forecasts
               a(href=`https://rschm007.github.io/Weather-Dashboard/` target="_blank")
                 img(src=`./assets/imgs/webdevo_gif3.gif` alt=`An animated gif of the Weather Dashboard web app`)
                 a(href=`https://rschm007.github.io/Weather-Dashboard/` target="_blank")
-                  i(class=`fas fa-link fa-2x m-2 p-2 ${hoverEnlarge}`)
+                  i(class=`fas fa-code-branch fa-2x m-2 p-2 ${hoverEnlarge}`)
                 a(href=`https://github.com/rschm007/Weather-Dashboard` target="_blank")
                   i(class=`fab fa-github-square fa-3x m-2 p-2 ${hoverEnlarge}`)
