slight changes to bg gradients and projects/skills page contents

--- a/pug/skills.pug
+++ b/pug/skills.pug
@@ -58,9 +58,9 @@ html(lang='en')
                 dt  Bootstrap
                 dt  Tailwindcss
                 dt  Node
+                dt  mySQL
                 dt  Visual Studio Code
                 dt  Github
-                dt  Terminal
             .skillCard(class=`${skillsCardStyles}`)
               i(class=`fas fa-pencil-ruler ${skillsIconStyles}`)
               h2(class=`${h2Styles}`) Designer
@@ -70,7 +70,7 @@ html(lang='en')
                 dt UX, UI
                 dt Logos
                 dt Posters
-                dt Social Media Images
+                dt Social Media
                 dt Web
                 dt Mobile
                 dt Apps
