everything works except animations

--- a/views/skills.pug
+++ b/views/skills.pug
@@ -40,7 +40,7 @@ html(lang='en')
                 100% { left: -2%; }
             }
     body
-      main.wrapper(id=`page_style` class=`fadeIn flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-auto w-auto p-10`)
+      main.wrapper(id=`page_style` class=`fadeIn flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-screen w-auto p-10`)
         .page_description(class=`flex flex-col`)
           include includes/nav
           include includes/resume
