tidied up css files dir. Removed redundant divs leftover from animation attempts

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -5,7 +5,7 @@ link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.15.1/css/al
 link(rel="stylesheet" type="text/css" href='/assets/styles/styles.css'  )
 link(rel="stylesheet" type="text/css" href='/assets/styles/output.css')
 //- local stylesheet
-link(rel="stylesheet" type="text/css" href='/assets/styles/main.min.css')
+link(rel="stylesheet" type="text/css" href='/assets/styles/main.css')
 //- scripts
 //- jquery
 script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
