--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -9,5 +9,9 @@ link(rel="stylesheet" type="text/css" href='/assets/styles/main.css')
 //- scripts
 //- jquery
 script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
+//- barba
+script(src="https://cdn.jsdelivr.net/npm/@barba/core")
+//- gsap
+script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js")
 //- local js
 script(src='/assets/script.js')
