--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -1,40 +1,80 @@
-@import './pageRender';
-@import './buttonStyles';
+@import "./pageRender";
+@import "./buttonStyles";
 
 dt {
-    padding-top: 0.5%;
+  padding-top: 0.5%;
 }
 
 nav {
-    z-index: 0;
+  z-index: 0;
 }
 
+// styles for transition animation
+ul.transition {
+  display: flex;
+  position: absolute;
+  z-index: 10;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
+  pointer-events: none;
+}
+
+ul.transition li {
+  transform: scaleY(0);
+  background: white;
+  width: 20%;
+}
+
+// styles for homepage
 .introduction {
-    margin-top: 20%;
+  margin-top: 20%;
 }
 
+// styles for about page
 .overlay {
-    background: url(../imgs/robert-1.png);
-    background-repeat: repeat;
-    margin-left: -20%;
-    margin-bottom: -10%;
-    opacity: 0.20;
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    z-index: 0;
+  background: url(../imgs/robert-1.png);
+  background-repeat: repeat;
+  margin-left: -20%;
+  margin-bottom: -10%;
+  opacity: 0.2;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  z-index: 0;
 }
 
 .aboutContent {
-    width: 50%;
+  width: 50%;
 }
 
+// styles for project page
 .project {
-    width: 25%;
-    height: 25%;
+  width: 25%;
+  height: 25%;
 }
 
+// styles for skill page
 .skillCard {
-    width: 30%;
+  width: 30%;
+}
+
+// media queries
+@media (max-width: 650px) {
+  main {
+    display: flex;
+    margin-top: 3em;
+    position: relative;
+    z-index: 3;
+  }
+  .wrapper {
+    max-width: 950px;
+    margin: 0 auto;
+  }
+  img {
+    width: 400px;
+  }
 }
