--- a/views/index.pug
+++ b/views/index.pug
@@ -5,8 +5,9 @@ html(lang='en')
     head
       title Robert Schmahl
       include includes/head
-    body
-      main.wrapper(id ="page_style" class="fadeIn flex flex-col bg-gradient-to-br from-indigo-900 via-blue-700 to-blue-500 h-screen w-screen")
-        .introduction(class="page_description flex flex-col text-center gap-10 text-white")
+    body(data-barba="wrapper")
+      include includes/transition
+      main.wrapper(data-barba="container" data-barba-namespace="home" class="flex flex-col bg-gradient-to-br from-indigo-900 via-blue-700 to-blue-500 h-screen w-screen")
+        div.introduction(class="page_description flex flex-col text-center gap-10 text-white")
           h1.typewriter(class="flex-initial font-medium text-4xl invisible") Hi, my name is Robert.
           h1.typewriter(class="flex-initial font-normal text-3xl invisible") I am a full stack web developer and graphic designer.
