--- a/views/skills.pug
+++ b/views/skills.pug
@@ -39,52 +39,54 @@ html(lang='en')
             @keyframes slide {
                 100% { left: -2%; }
             }
-    body
-      main.wrapper(id=`page_style` class=`fadeIn flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-screen w-auto p-10`)
-        include includes/nav
-        include includes/resume
-        //- include includes/resume
-        .skills(class="flex flex-wrap mt-20 ml-32 mr-32")
-          .skillCard(class=`${skillsCardStyles}`)
-            i(class=`fas fa-cogs ${skillsIconStyles}`)
-            h2(class=`${h2Styles}`) Developer
-            p(class=`${pStyles}`) I am a full-stack web developer, able to tackle projects from front-end to back-end.
-            h3(class=`${h3Styles}`) Dev Tools & Languages:
-            dl
-              dt  HTML/Pug
-              dt  CSS/Sass
-              dt  Javascript
-              dt  Bootstrap
-              dt  Tailwindcss
-              dt  Node
-              dt  mySQL
-              dt  Visual Studio Code
-              dt  Github
-          .skillCard(class=`${skillsCardStyles}`)
-            i(class=`fas fa-pencil-ruler ${skillsIconStyles}`)
-            h2(class=`${h2Styles}`) Designer
-            p(class=`${pStyles}`) I strive to create elegant designs that create impactful user interactions.
-            h3(class=`${h3Styles}`) Things I love to design:
-            dl
-              dt UX, UI
-              dt Logos
-              dt Posters
-              dt Social Media
-              dt Web
-              dt Mobile
-              dt Apps
-              dt Storefronts
-          .skillCard(class=`${skillsCardStyles}`)
-            i(class=`fas fa-users ${skillsIconStyles}`)
-            h2(class=`${h2Styles}`) Collaborator
-            p(class=`${pStyles}`) I love working in teams, and I draw upon diverse experiences to inform my collaborating.
-            h3(class=`${h3Styles}`) Experiences I draw from:
-            dl
-              dt 2+ years government experience
-              dt 3+ years web development
-              dt 4+ years graphic design
-              dt 4+ years small business owner
-              dt 4+ years event coordination
-              dt 4+ years web design
-              dt 6+ years photography
-              dt 8+ years customer service
+    body(data-barba="wrapper")
+      include includes/transition
+      main.wrapper(data-barba="container" data-barba-namespace="skills" class=`flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-screen w-auto p-10`)
+        .page_description(class=`flex flex-col`)
+          include includes/nav
+          include includes/resume
+          //- include includes/resume
+          .skills(class="flex flex-wrap mt-20 ml-32 mr-32")
+            .skillCard(class=`${skillsCardStyles}`)
+              i(class=`fas fa-cogs ${skillsIconStyles}`)
+              h2(class=`${h2Styles}`) Developer
+              p(class=`${pStyles}`) I am a full-stack web developer, able to tackle projects from front-end to back-end.
+              h3(class=`${h3Styles}`) Dev Tools & Languages:
+              dl
+                dt  HTML/Pug
+                dt  CSS/Sass
+                dt  Javascript
+                dt  Bootstrap
+                dt  Tailwindcss
+                dt  Node
+                dt  mySQL
+                dt  Visual Studio Code
+                dt  Github
+            .skillCard(class=`${skillsCardStyles}`)
+              i(class=`fas fa-pencil-ruler ${skillsIconStyles}`)
+              h2(class=`${h2Styles}`) Designer
+              p(class=`${pStyles}`) I strive to create elegant designs that create impactful user interactions.
+              h3(class=`${h3Styles}`) Things I love to design:
+              dl
+                dt UX, UI
+                dt Logos
+                dt Posters
+                dt Social Media
+                dt Web
+                dt Mobile
+                dt Apps
+                dt Storefronts
+            .skillCard(class=`${skillsCardStyles}`)
+              i(class=`fas fa-users ${skillsIconStyles}`)
+              h2(class=`${h2Styles}`) Collaborator
+              p(class=`${pStyles}`) I love working in teams, and I draw upon diverse experiences to inform my collaborating.
+              h3(class=`${h3Styles}`) Experiences I draw from:
+              dl
+                dt 2+ years government experience
+                dt 3+ years web development
+                dt 4+ years graphic design
+                dt 4+ years small business owner
+                dt 4+ years event coordination
+                dt 4+ years web design
+                dt 6+ years photography
+                dt 8+ years customer service
