--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -9,7 +9,9 @@ nav {
   z-index: 0;
 }
 
+// ====================================================
 // styles for transition animation
+// ====================================================
 ul.transition {
   display: flex;
   position: absolute;
@@ -28,12 +30,16 @@ ul.transition li {
   width: 20%;
 }
 
+// ====================================================
 // styles for homepage
+// ====================================================
 .introduction {
   margin-top: 20%;
 }
 
+// ====================================================
 // styles for about page
+// ====================================================
 .overlay {
   background: url(../imgs/robert-1.png);
   background-repeat: repeat;
@@ -51,18 +57,53 @@ ul.transition li {
   width: 50%;
 }
 
+// ====================================================
 // styles for project page
+// ====================================================
 .project {
   width: 25%;
   height: 25%;
 }
 
+// ====================================================
 // styles for skill page
+// ====================================================
 .skillCard {
   width: 30%;
 }
 
+// resume download animation
+
+.resumeAnimation {
+  position: relative;
+  overflow: hidden;
+  width: 25%;
+}
+
+.resumeDwnload {
+  position: fixed;
+  width: 25%;
+  left: -25%;
+  margin-top: 5%;
+  padding-left: 4%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
+  -webkit-animation: slide 0.5s forwards;
+  -webkit-animation-delay: 1s;
+  animation: slide 0.5s forwards;
+  animation-delay: 1s;
+}
+
+@-webkit-keyframes slide {
+  100% { left: -2%; }
+}
+
+@keyframes slide {
+  100% { left: -2%; }
+}
+
+// ====================================================
 // media queries
+// ====================================================
 @media (max-width: 650px) {
   main {
     display: flex;
