--- a/views/contact.pug
+++ b/views/contact.pug
@@ -19,9 +19,13 @@ html(lang='en')
           .wrapper(class="flex flex-wrap mt-20 mx-auto px-auto")
             iframe(src="https://docs.google.com/forms/d/e/1FAIpQLSdPRB1YR4bfALbPptVAUAsYcGRWLpsgmQ_AsvHbNk6xTerFbg/viewform?embedded=true" class="flex-initial bg-gray-100 rounded-lg shadow-lg" width="520" scrolling="no" height="720" frameborder="0" marginheight="0" marginwidth="0") Loading...
             .contactButtons(class="flex-initial ml-10")
-                include includes/resume
-                    a(href="https://www.linkedin.com/in/robert-schmahl/" class="linkedin" target="_blank")
-                        i(class=`fab fa-linkedin fa-7x p-4  ${hoverEnlarge} text-white`)
-                    
-                    a(href="https://github.com/rschm007" class="github" target="_blank")
-                        i(class=`fab fa-github-square fa-7x p-4 ${hoverEnlarge} text-white`)
+              a(href="../assets/downloads/2020-Resume-RobertSchmahl.pdf" download="2020-Resume-RobertSchmahl.pdf" class=`flex flex-wrap resumeLink bg-gray-100 rounded-lg py-5 px-3 ${hoverEnlarge}`)
+                  i(class="fa fa-download fa-2x" style="color: Mediumslateblue;")
+                  p(class="flex-wrap text-lg text-indigo-800 ml-2") Download my resume
+                  span(class="flex items-center text-sm italic text-indigo-800")  &nbsp;(pdf 110kb)
+
+              a(href="https://www.linkedin.com/in/robert-schmahl/" class="linkedin" target="_blank")
+                  i(class=`fab fa-linkedin fa-7x p-4  ${hoverEnlarge} text-white`)
+              
+              a(href="https://github.com/rschm007" class="github" target="_blank")
+                  i(class=`fab fa-github-square fa-7x p-4 ${hoverEnlarge} text-white`)
