added new nav bar for mobile use with media queries

--- a/views/about.pug
+++ b/views/about.pug
@@ -15,6 +15,7 @@ html(lang='en')
         .overlay(class=`bg-local w-full`)
         .page_description(class="flex flex-col")
           include includes/nav
+          include includes/mobileMenu
           header.aboutHeader(class=`text-center flex-wrap p-5`)
             h2(class=`text-2xl font-bold text-gray-100 pt-4 text-5xl`) Who is Robert Schmahl?
             h3(class=`text-xl font-semibold text-blue-900 pt-1 pb-4 text-xl pb-4`) Or, How I Learned to Stop Worrying and Love the Process
