--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,6 +1,6 @@
 - const btnStyles = `btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg`;
 
-nav(class=`flex flex-wrap content-start mt-20 mx-auto`)
+nav(class=`desktop flex flex-wrap content-start mt-20 mx-auto`)
   a(href="home" class=`${btnStyles} ${homeActive}` type=`button`) Home
   a(href="projects" class=`${btnStyles} ${projectActive}` type=`button`) Projects
   a(href="skills" class=`${btnStyles} ${skillsActive}` type=`button`) Skills
