--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ html(lang='en')
     body(data-barba="wrapper")
       include includes/transition
       main.wrapper(data-barba="container" data-barba-namespace="home" class="flex flex-col bg-gradient-to-br from-indigo-900 via-blue-700 to-blue-500 h-screen w-screen")
+        include includes/mobileMenu
         div.introduction(class="page_description flex flex-col text-center gap-10 text-white")
-          h1.typewriter(class="flex-initial font-medium text-4xl invisible") Hi, my name is Robert.
-          h1.typewriter(class="flex-initial font-normal text-3xl invisible") I am a full stack web developer and graphic designer.
+          h1.typewriter(class="flex-initial px-10 font-medium text-4xl invisible") Hi, my name is Robert.
+          h1.typewriter(class="flex-initial px-10 font-normal text-3xl invisible") I am a full stack web developer and designer.
