--- a/views/projects.pug
+++ b/views/projects.pug
@@ -15,6 +15,7 @@ html(lang='en')
       main.wrapper(data-barba="container" data-barba-namespace="projects" class=`flex flex-col bg-gradient-to-br from-green-900 via-green-600 to-teal-400 h-auto w-auto p-10`)
         .page_description(class="flex flex-col")
           include includes/nav
+          include includes/mobileMenu
           .projects(class="flex flex-wrap mt-20 px-auto")
             .project(class=`${projectCard}`)
               h2(class=`${h2Styles}`) Team Template Generator
