--- a/views/skills.pug
+++ b/views/skills.pug
@@ -17,6 +17,7 @@ html(lang='en')
       main.wrapper(data-barba="container" data-barba-namespace="skills" class=`flex flex-col bg-gradient-to-br from-orange-700 via-orange-500 to-yellow-400 h-screen w-auto p-10`)
         .page_description(class=`flex flex-col`)
           include includes/nav
+          include includes/mobileMenu
           a(href="../assets/downloads/2020-Resume-RobertSchmahl.pdf" download="2020-Resume-RobertSchmahl.pdf" id="resumeAnimation" class=`resumeDwnload flex flex-wrap resumeLink bg-gray-100 rounded-lg py-5 px-3 ${hoverEnlarge}`)
               i(class="fa fa-download fa-2x" style="color: Mediumslateblue;")
               p(class="flex-wrap text-lg text-indigo-800 ml-2") Download my resume
