fixed screen height for desktops

--- a/views/about.pug
+++ b/views/about.pug
@@ -11,7 +11,7 @@ html(lang='en')
       include includes/head
     body(data-barba="wrapper")
       include includes/transition
-      main.wrapper(data-barba="container" data-barba-namespace="about" class=`aboutBG bg-gradient-to-br from-blue-900 to-teal-300 h-full w-auto`)
+      main.wrapper(data-barba="container" data-barba-namespace="about" class=`aboutBG bg-gradient-to-br from-blue-900 to-teal-300 h-screen w-auto`)
         .overlay(class=`bg-local w-full`)
         .page_description(class="flex flex-col")
           include includes/nav
