more media queries work

--- a/views/home.pug
+++ b/views/home.pug
@@ -12,5 +12,5 @@ html(lang='en')
         include includes/mobileMenu
         div.introduction(class="page_description flex flex-col text-center gap-10 text-white")
           h1(class="flex-initial px-10 font-medium text-4xl") Hi, my name is Robert.
-          h1(class="flex-initial px-10 font-normal text-3xl") I am a full stack web developer and graphic designer.
+          h1(class="flex-initial px-10 text-3xl") I am a full stack web developer and graphic designer.
           include includes/nav
