--- a/views/index.pug
+++ b/views/index.pug
@@ -11,4 +11,4 @@ html(lang='en')
         include includes/mobileMenu
         div.introduction(class="page_description flex flex-col text-center gap-10 text-white")
           h1.typewriter(class="flex-initial px-10 font-medium text-4xl invisible") Hi, my name is Robert.
-          h1.typewriter(class="flex-initial px-10 font-normal text-3xl invisible") I am a full stack web developer and designer.
+          h1.typewriter(class="flex-initial px-10 text-3xl invisible") I am a full stack web developer and designer.
