--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -288,11 +288,11 @@ ul.transition li {
       margin-top: 5rem;
     }
     &-3xl {
-      font-size: 3.5vw;
+      font-size: 4.2vw;
       margin-top: 5rem;
     }
     &-2xl {
-      font-size: 3vw;
+      font-size: 5vw;
     }
     &-xl {
       font-size: 4vw;
@@ -300,7 +300,11 @@ ul.transition li {
   }
 
   .font-normal {
-    font-size: 2vw;
+    font-size: 3vw;
+  }
+
+  .fa-3x {
+    font-size: 4em;
   }
 
   p {
@@ -313,6 +317,7 @@ ul.transition li {
 
   // mobile nav menu
   #overlay ul {
+    font-size: 8vw;
   }
 
   // homepage introduction div
@@ -349,9 +354,13 @@ ul.transition li {
 
   // **** Media queries for projects page
   .project {
-    width: auto;
+    width: 80vw;
     height: auto;
     margin-top: 1rem;
+    img {
+      width: auto;
+      max-width: 100%;
+    }
   }
 
   // **** Media queries for skills page
@@ -396,9 +405,7 @@ ul.transition li {
   }
 
   .bg-local {
-    left: auto;
-    bottom: -50%;
-    right: -5%;
+    visibility: hidden;
   }
 
   .aboutContent {
@@ -446,12 +453,13 @@ ul.transition li {
     border-radius: 4px;
     text-align: center;
     text-decoration: none;
+    font-size: 4rem;
     position: relative;
     display: inline-block;
-    width: 3rem;
-    height: 3rem;
+    width: 9rem;
+    height: 9rem;
     padding-top: 0.5rem;
-    margin: 0 2px;
+    margin: 0 0.5rem;
     -o-transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -462,46 +470,6 @@ ul.transition li {
     &:hover {
       background: #ef92a3;
     }
-
-    //  txt pops up when icon is in hover state
-    &:hover span {
-      bottom: 50px;
-      visibility: visible;
-      opacity: 1;
-    }
-
-    //  pop-up text
-    span {
-      color: #666;
-      position: absolute;
-      font-family: sans-serif;
-      bottom: 0;
-      left: -25px;
-      right: -25px;
-      padding: 5px 7px;
-      z-index: -1;
-      font-size: 14px;
-      border-radius: 2px;
-      background: #fff;
-      visibility: hidden;
-      opacity: 0;
-      -o-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      -moz-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-      transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
-      // pop-up text arrow
-      &:before {
-        content: "";
-        width: 0;
-        height: 0;
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        border-top: 5px solid #fff;
-        position: absolute;
-        bottom: -5px;
-        left: 40px;
-      }
-    }
   }
 }
+
